<?xml version='1.0' encoding='utf-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>demo</groupId>
	<artifactId>java17demo</artifactId>
	<version>1.0</version>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencies>
	    <!-- JAX-B is needed as a dependency on Java 11+ -->
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.0</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<!-- Enable the binary scanner -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includePluginDependencies>true</includePluginDependencies>
					<mainClass>com.ibm.ws.report.binary.cmdline.DriveScan</mainClass>
					<addOutputToClasspath>false</addOutputToClasspath>
					<arguments>
						<argument>${project.build.directory}/${project.build.finalName}.${project.packaging}</argument>
						<argument>--analyzeJavaSE</argument>
						<argument>--sourceJava=ibm8</argument>
						<argument>--targetJava=java17</argument>
						<argument>--nobrowser</argument>
						<argument>--output=${project.build.directory}</argument>
					</arguments>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.ibm.websphere.appmod.tools</groupId>
						<artifactId>binary-app-scanner</artifactId>
						<version>22.0.0.4</version>
						<type>jar</type>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>java17demo.java8.Application</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
